# calculator

./: CMakeLists.txt  README.md  calcengine.cpp  calcengine.h  cutefish-calculator.desktop  main.cpp  qml.qrc
debian/: changelog  control  copyright
qml/: ButtonsView.qml  CTextField.qml  StandardButton.qml  StandardPad.qml  Zone.qml  main.qml
translations/: cs_CZ.ts  de_DE.ts  en_US.ts  es_ES.ts  es_MX.ts  fr_FR.ts  it_IT.ts  nb_NO.ts  pl_PL.ts  pt_BR.ts  ru_RU.ts  si_LK.ts  zh_CN.ts  zh_HK.ts  zh_TW.ts
